# sqlbot

C++sqlbot-php/: README.SQL.INSTALL  chatlog.php  hubconfig.php  hubextras.php  hubstats.php  hubverbosity.php  index.php  searchstats.php  sqlbot.txt  statsclient.php  statssearch.php  userdb.php  userinfo.php
C++sqlbot-php/conf/: dbinfo.inc.php  forms.php  image.php  mainmenu.php  sqlbot.css  udbmenu.php
C++sqlbot-php/img/: sqlbot.xcf
csqlbot/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  subdirs
csqlbot-php/: README.SQL.INSTALL  chatlog.php  hubverbosity.php  statsclient.php  statssearch.php  userdb.php  userinfo.php
csqlbot-php/conf/: image.php  mainmenu.php  udbmenu.php
csqlbot/admin/: acinclude.m4.in  am_edit  config.pl  cvs.sh
csqlbot/autom4te.cache/: output.0  requests  traces.0
csqlbot/csqlbot/: Makefile.am  Makefile.in  botcommands.cpp  botcommands.h  botcontroller.cpp  botcontroller.h  dcbotconfig.cpp  dcbotconfig.h  dcclient.cpp  dcclient.h  globalconf.h  hubinterface.cpp  hubinterface.h  log.cpp  log.h  main.cpp  mysqlbot.cpp  mysqlbot.h  mysqlcon.cpp  mysqlcon.h  mysqlhub.cpp  mysqlhub.h  timehand.cpp  timehand.h  userinfo.cpp  userinfo.h
csqlbot/csqlbot/docs/: Makefile.in
csqlbot/csqlbot/docs/en/: Makefile.in  clients.txt
php-sqlbot/: client-add.php  client-cslots-edit.php  client-edit.php  client-main.php  config-hub.php  config-log.php  config-main.php  config-vars-edit.php  config-vars.php  config-verbosity.php  dbinfo.inc.php  header.ini  hub-records.php  index.php  ipfilter-add.php  ipfilter-edit.php  ipfilter-main.php  log-ban.php  log-fakers.php  log-hub.php  log-online.php  nick-add.php  nick-edit.php  nick-main.php  rules-add.php  rules-edit.php  rules-main.php  sqlbot.css  stats-hub.php  stats-hub1.php  stats-records.php  stats-share.php  stats-user.php  user-manage.php  user-type.php
php-sqlbot/flags/: flags.tar.bz2
sqlbot/: README  changelog  sqlbot.pl
sqlbot-install/: sqlbotInstall.pl  sqlbotupgrade.pl
sqlbot/modules/: checkpm  clientchecks.pm  commands.pm  common.pm  events.pm  kickban.pm  main.pm  mysql.pm  odch.pm  statistics.pm  userManagement.pm
